--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "gatsby-tutorial",
-  "version": "1.0.0",
+  "name": "gatsby-tests",
+  "version": "1.1.0",
   "private": true,
-  "description": "Gatsby tutorial",
+  "description": "Gatsby tests",
   "author": "Solange Gueiros",
   "keywords": [
-    "gatsby"
+    "gatsby",
+    "i18n"
   ],
   "scripts": {
     "develop": "gatsby develop",
@@ -20,10 +21,13 @@
     "gatsby": "^4.5.4",
     "gatsby-plugin-image": "^2.5.2",
     "gatsby-plugin-mdx": "^3.5.2",
+    "gatsby-plugin-react-helmet": "^5.3.0",
     "gatsby-plugin-sharp": "^4.5.2",
     "gatsby-source-filesystem": "^4.5.2",
+    "gatsby-theme-i18n": "^3.0.0",
     "gatsby-transformer-sharp": "^4.5.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0"
   }
 }
