--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gatsby-plugin-mdx": "^3.5.2",
     "gatsby-plugin-react-helmet": "^5.3.0",
     "gatsby-plugin-sharp": "^4.5.2",
+    "gatsby-remark-images": "^6.5.2",
     "gatsby-source-filesystem": "^4.5.2",
     "gatsby-theme-i18n": "^3.0.0",
     "gatsby-transformer-sharp": "^4.5.0",
